Remove large images spacing and border radius issue

--- a/src/scss/components/_case-color.scss
+++ b/src/scss/components/_case-color.scss
@@ -286,7 +286,7 @@
   // Recettes en pot
   .color-palette-recettes-en-pot-1 {
     background: #f4bd7c;
-    border-color: #fff6dd;
+    border-color: #fff6dd !important;
 
     p {
       color: #fff6dd;
@@ -294,7 +294,7 @@
   }
   .color-palette-recettes-en-pot-2 {
     background: #b77222;
-    border-color: #f2b84c;
+    border-color: #f2b84c !important;
 
     p {
       color: #f2b84c;
@@ -302,7 +302,7 @@
   }
   .color-palette-recettes-en-pot-3 {
     background: #2a4a59;
-    border-color: #6f97a9;
+    border-color: #6f97a9 !important;
 
     p {
       color: #6f97a9;
@@ -310,7 +310,7 @@
   }
   .color-palette-recettes-en-pot-4 {
     background: #1f3340;
-    border-color: #637b8a;
+    border-color: #637b8a !important;
 
     p {
       color: #637b8a;
@@ -318,7 +318,7 @@
   }
   .color-palette-recettes-en-pot-5 {
     background: #f5f0eb;
-    border-color: #989898;
+    border-color: #989898 !important;
 
     p {
       color: #989898;
@@ -326,7 +326,7 @@
   }
   .color-palette-recettes-en-pot-6 {
     background: #686868;
-    border-color: #a8a8a8;
+    border-color: #a8a8a8 !important;
 
     p {
       color: #a8a8a8;
@@ -334,7 +334,7 @@
   }
   .color-palette-recettes-en-pot-7 {
     background: #989898;
-    border-color: #dddddd;
+    border-color: #dddddd !important;
 
     p {
       color: #dddddd;
@@ -342,7 +342,7 @@
   }
   .color-palette-recettes-en-pot-8 {
     background: #b6b6b6;
-    border-color: #e9e9e9;
+    border-color: #e9e9e9 !important;
 
     p {
       color: #e9e9e9;
@@ -350,7 +350,7 @@
   }
   .color-palette-recettes-en-pot-9 {
     background: #f9f9f9;
-    border-color: #ababab;
+    border-color: #ababab !important;
 
     p {
       color: #ababab;
@@ -358,7 +358,7 @@
   }
   .color-palette-recettes-en-pot-10 {
     background: #ffffff;
-    border-color: #c4c4c4;
+    border-color: #c4c4c4 !important;
 
     p {
       color: #c4c4c4;
