--- a/src/scss/settings/_colors.scss
+++ b/src/scss/settings/_colors.scss
@@ -15,7 +15,7 @@ $color-link-active: lighten($color-link, 5%);
 $color-link-focus: $color-link;
 
 // Color palette
-$color-accent: #A87450;
+$color-accent: #a87450;
 $color-1: #081420;
 $color-2: #4A5B6D;
 $color-3: #A9AFC7;
